<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
>
    <CheckBoxPreference
        android:key="@string/pref_key_local_mode"
        android:title="@string/pref_title_local_mode_ja"
        android:summary="@string/pref_summ_local_mode_ja"
        android:defaultValue="false"
    />
    <CheckBoxPreference
        android:key="@string/pref_key_vibration"
        android:title="@string/pref_title_vibration_ja"
        android:summary="@string/pref_summ_vibration_ja"
        android:defaultValue="true"
    />
    <CheckBoxPreference
        android:key="@string/pref_key_color_effect"
        android:title="@string/pref_title_color_effect_ja"
        android:summary="@string/pref_summ_color_effect_ja"
        android:defaultValue="true"
    />
</PreferenceScreen>