<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_main"
    android:background="@color/contentMain"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity"
>

    <TextView
        android:id="@+id/quizzes_progress"
        android:text="@string/quizzes_progress"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/activity_vertical_margin"
    />

    <TextView
        android:id="@+id/quiz_display"
        android:text="@string/app_name"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:minHeight="100dp"
        android:layout_below="@id/quizzes_progress"
    />

    <include
        layout="@layout/welcome_area"
        android:id="@+id/welcome_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
    />

    <include
        layout="@layout/result_area"
        android:id="@+id/result_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quiz_display"
    />

    <ListView
        android:id="@+id/choices_list"
        android:layout_below="@id/result_area"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="10dp"
    />

    <TextView
        android:id="@+id/point_display"
        android:text="@string/points"
        android:textSize="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
    />

    <include
        layout="@layout/loading_area"
        android:id="@+id/loading_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />

</RelativeLayout>
